<resources>
    <string name="app_name">BookWorm</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Ласкаво просимо!</string>
    <string name="reader">Читач</string>
    <string name="edit_profile">Редагувати профіль</string>
    <string name="reading_mode">Режим читання</string>
    <string name="achievements">Досягнення</string>
    <string name="support">Підтримка</string>
    <string name="logout">Вийти</string>

</resources>